<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		xmlns:tools="http://schemas.android.com/tools"
		>

		<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				>

				<ImageView
						android:id="@+id/image_details_name"
						android:layout_width="32dp"
						android:layout_height="32dp"
						android:layout_margin="8dp"
						app:layout_constraintDimensionRatio="1:1"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toTopOf="@+id/image_details_hours"
						app:layout_constraintVertical_chainStyle="packed"
						android:background="@drawable/details_burger"
						android:backgroundTint="@color/primary_dark"
						/>
				<TextView
						android:id="@+id/text_details_name"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toRightOf="@+id/image_details_name"
						app:layout_constraintTop_toTopOf="@+id/image_details_name"
						app:layout_constraintBottom_toBottomOf="@+id/image_details_name"
						tools:text="@string/details_name_default"
						android:textColor="@color/primary_text"
						/>

				<ImageView
						android:id="@+id/image_details_hours"
						android:layout_width="32dp"
						android:layout_height="32dp"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@id/image_details_name"
						app:layout_constraintBottom_toTopOf="@+id/image_details_address"
						android:background="@drawable/details_hours"
						android:backgroundTint="@color/primary_dark"
						/>

				<TextView
						android:id="@+id/text_details_hours_open"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toRightOf="@+id/image_details_hours"
						app:layout_constraintTop_toTopOf="@+id/image_details_hours"
						app:layout_constraintBottom_toBottomOf="@+id/image_details_hours"
						tools:text="@string/details_hours_open_default"
						android:textColor="@color/primary_text"
						/>

				<TextView
						android:id="@+id/text_details_hours_separator"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toRightOf="@+id/text_details_hours_open"
						app:layout_constraintTop_toTopOf="@+id/image_details_hours"
						app:layout_constraintBottom_toBottomOf="@+id/image_details_hours"
						android:text="@string/details_hours_separator"
						android:textColor="@color/primary_text"
						/>

				<TextView
						android:id="@+id/text_details_hours_close"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toRightOf="@+id/text_details_hours_separator"
						app:layout_constraintTop_toTopOf="@+id/image_details_hours"
						app:layout_constraintBottom_toBottomOf="@+id/image_details_hours"
						tools:text="@string/details_hours_close_default"
						android:textColor="@color/primary_text"
						/>

				<ImageView
						android:id="@+id/image_details_address"
						android:layout_width="32dp"
						android:layout_height="32dp"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/image_details_hours"
						app:layout_constraintBottom_toTopOf="@id/image_details_phone"
						android:background="@drawable/details_address"
						android:backgroundTint="@color/primary_dark"
						/>
				<TextView
						android:id="@+id/text_details_address"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toRightOf="@+id/image_details_address"
						app:layout_constraintTop_toTopOf="@+id/image_details_address"
						app:layout_constraintBottom_toBottomOf="@+id/image_details_address"
						tools:text="@string/details_address_default"
						android:textColor="@color/primary_text"
						/>

				<ImageView
						android:id="@+id/image_details_phone"
						android:layout_width="32dp"
						android:layout_height="32dp"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/image_details_address"
						app:layout_constraintBottom_toTopOf="@+id/image_details_site"
						android:background="@drawable/details_phone"
						android:backgroundTint="@color/primary_dark"
						/>
				<TextView
						android:id="@+id/text_details_phone"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toRightOf="@+id/image_details_phone"
						app:layout_constraintTop_toTopOf="@+id/image_details_phone"
						app:layout_constraintBottom_toBottomOf="@+id/image_details_phone"
						tools:text="@string/details_phone_default"
						android:textColor="@color/primary_text"
						/>

				<ImageView
						android:id="@+id/image_details_site"
						android:layout_width="32dp"
						android:layout_height="32dp"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/image_details_phone"
						app:layout_constraintBottom_toTopOf="@+id/image_details_menu"
						android:background="@drawable/details_site"
						android:backgroundTint="@color/primary_dark"
						/>
				<TextView
						android:id="@+id/text_details_site"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toRightOf="@+id/image_details_site"
						app:layout_constraintTop_toTopOf="@+id/image_details_site"
						app:layout_constraintBottom_toBottomOf="@+id/image_details_site"
						tools:text="@string/details_site_default"
						android:textColor="@color/primary_text"
						/>

				<ImageView
						android:id="@+id/image_details_menu"
						android:layout_width="32dp"
						android:layout_height="32dp"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/image_details_site"
						app:layout_constraintBottom_toTopOf="@+id/text_details_price"
						android:background="@drawable/details_menu"
						android:backgroundTint="@color/primary_dark"
						/>
				<TextView
						android:id="@+id/text_details_menu"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toRightOf="@+id/image_details_menu"
						app:layout_constraintTop_toTopOf="@+id/image_details_menu"
						app:layout_constraintBottom_toBottomOf="@+id/image_details_menu"
						android:text="@string/details_menu"
						android:textColor="@color/primary_text"
						/>

				<TextView
						android:id="@+id/text_details_price"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/image_details_menu"
						app:layout_constraintBottom_toTopOf="@+id/text_details_rateme"
						tools:text="@string/details_price_currency"
						android:textColor="@color/primary_text"
						/>
				<TextView
						android:id="@+id/text_details_price_description"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toRightOf="@+id/text_details_price"
						app:layout_constraintTop_toTopOf="@+id/text_details_price"
						app:layout_constraintBottom_toBottomOf="@+id/text_details_price"
						tools:text="@string/details_pricetag_default"
						android:textColor="@color/primary_text"
						/>

				<View
						android:id="@+id/view_details_stroke_left"
						android:layout_width="0dp"
						android:layout_height="2dp"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toLeftOf="@+id/text_details_rateme"
						app:layout_constraintTop_toTopOf="@+id/text_details_rateme"
						app:layout_constraintBottom_toBottomOf="@+id/text_details_rateme"
						android:background="@color/divider"
						/>
				<TextView
						android:id="@+id/text_details_rateme"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="32dp"
						android:padding="2dp"
						app:layout_constraintRight_toLeftOf="@id/view_details_stroke_right"
						app:layout_constraintLeft_toRightOf="@id/view_details_stroke_left"
						app:layout_constraintTop_toBottomOf="@id/text_details_price"
						app:layout_constraintBottom_toTopOf="@+id/seekbar_details_rating"
						android:text="@string/details_rate_me"
						android:textColor="@color/primary_text"
						android:textSize="18sp"
						/>
				<View
						android:id="@+id/view_details_stroke_right"
						android:layout_width="0dp"
						android:layout_height="2dp"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintLeft_toRightOf="@+id/text_details_rateme"
						app:layout_constraintTop_toTopOf="@+id/text_details_rateme"
						app:layout_constraintBottom_toBottomOf="@+id/text_details_rateme"
						android:background="@color/divider"
						/>

				<android.support.v7.widget.AppCompatSeekBar
						android:id="@+id/seekbar_details_rating"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						android:max="100"
						android:thumb="@android:drawable/star_on"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toLeftOf="@id/text_details_rating_value"
						app:layout_constraintTop_toBottomOf="@id/text_details_rateme"
						app:layout_constraintBottom_toTopOf="@+id/textinput_details_rating_submitter"
						/>

				<TextView
						android:id="@+id/text_details_rating_value"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						app:layout_constraintLeft_toRightOf="@id/seekbar_details_rating"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="@id/seekbar_details_rating"
						app:layout_constraintBottom_toBottomOf="@id/seekbar_details_rating"
						android:focusable="false"
						tools:text="9.9"
						android:textSize="24sp"
						/>

				<android.support.design.widget.TextInputLayout
						android:id="@+id/textinput_details_rating_submitter"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						app:layout_constraintTop_toBottomOf="@id/seekbar_details_rating"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toLeftOf="@id/button_details_submit"
						app:layout_constraintBottom_toBottomOf="parent"
						android:layout_margin="8dp"
						android:hint="@string/details_submitter_hint"
						android:textColor="@color/primary_text"
						>

						<EditText
								android:id="@+id/text_details_rating_submitter"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:inputType="textPersonName"
								android:maxLines="1"
								/>
				</android.support.design.widget.TextInputLayout>

				<Button
						android:id="@+id/button_details_submit"
						android:layout_width="32dp"
						android:layout_height="32dp"
						app:layout_constraintLeft_toRightOf="@id/textinput_details_rating_submitter"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="@id/textinput_details_rating_submitter"
						app:layout_constraintBottom_toBottomOf="@id/textinput_details_rating_submitter"
						android:background="@android:drawable/ic_menu_save"
						android:backgroundTint="@color/primary_dark"
						/>

		</android.support.constraint.ConstraintLayout>
</ScrollView>